[gd_scene load_steps=2 format=3 uid="uid://cn3ny8jigjkt8"]

[ext_resource type="Script" uid="uid://cib0pdugmsfxw" path="res://scripts/ui.gd" id="1_h5f8d"]

[node name="Ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_h5f8d")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
offset_right = 500.0
offset_bottom = 200.0
color = Color(0.490196, 0.490196, 0.490196, 0.490196)

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(500, 200)
layout_mode = 1
offset_right = 500.0
offset_bottom = 200.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Rows" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 30

[node name="Column" type="VBoxContainer" parent="MarginContainer/Rows"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MarginContainer/Rows/Column"]
layout_mode = 2
vertical_alignment = 1

[node name="Value" type="Label" parent="MarginContainer/Rows/Column"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 5
text = "Vertical"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Value2" type="Label" parent="MarginContainer/Rows/Column"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 5
text = "Horizontal"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Column2" type="VBoxContainer" parent="MarginContainer/Rows"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MarginContainer/Rows/Column2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 5
text = "Force [N]"
vertical_alignment = 1

[node name="VerticalForce" type="Label" parent="MarginContainer/Rows/Column2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 5
text = "N/A"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HorizontalForce" type="Label" parent="MarginContainer/Rows/Column2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 5
text = "N/A"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Column3" type="VBoxContainer" parent="MarginContainer/Rows"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MarginContainer/Rows/Column3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/outline_size = 5
text = "Displacement [mm]"
vertical_alignment = 1

[node name="VerticalDisplacement" type="Label" parent="MarginContainer/Rows/Column3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_constants/outline_size = 5
text = "N/A"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HorizontalDisplacement" type="Label" parent="MarginContainer/Rows/Column3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/outline_size = 5
text = "N/A"
horizontal_alignment = 2
vertical_alignment = 1
